packages/apyds-bnf/apyds_bnf-0.0.11-py3-none-any.whl/apyds_bnf/DsParser.py
# Generated from /home/runner/work/_temp/setup-uv-cache/sdists-v9/.tmpU9Czlb/apyds_bnf-0.0.11/Ds.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DsParser ( Parser ):

    grammarFileName = "Ds.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'(subscript'", "')'", "'(function'", 
                     "'(unary'", "'(binary'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "RULE", "WHITESPACE", "COMMENT", 
                      "NEWLINE", "SYMBOL" ]

    RULE_rule_pool = 0
    RULE_rule = 1
    RULE_term = 2

    ruleNames =  [ "rule_pool", "rule", "term" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    RULE=6
    WHITESPACE=7
    COMMENT=8
    NEWLINE=9
    SYMBOL=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Rule_poolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DsParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(DsParser.NEWLINE)
            else:
                return self.getToken(DsParser.NEWLINE, i)

        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DsParser.RuleContext)
            else:
                return self.getTypedRuleContext(DsParser.RuleContext,i)


        def getRuleIndex(self):
            return DsParser.RULE_rule_pool

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_pool" ):
                return visitor.visitRule_pool(self)
            else:
                return visitor.visitChildren(self)




    def rule_pool(self):

        localctx = DsParser.Rule_poolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_rule_pool)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 9
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 6
                    self.match(DsParser.NEWLINE) 
                self.state = 11
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1146) != 0):
                self.state = 12
                self.rule_()
                self.state = 21
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 14 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 13
                            self.match(DsParser.NEWLINE)
                            self.state = 16 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==9):
                                break

                        self.state = 18
                        self.rule_() 
                    self.state = 23
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)



            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 26
                self.match(DsParser.NEWLINE)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(DsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE(self):
            return self.getToken(DsParser.RULE, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(DsParser.NEWLINE)
            else:
                return self.getToken(DsParser.NEWLINE, i)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DsParser.TermContext)
            else:
                return self.getTypedRuleContext(DsParser.TermContext,i)


        def getRuleIndex(self):
            return DsParser.RULE_rule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule" ):
                return visitor.visitRule(self)
            else:
                return visitor.visitChildren(self)




    def rule_(self):

        localctx = DsParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1082) != 0):
                self.state = 34
                self.term()
                self.state = 36 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 35
                    self.match(DsParser.NEWLINE)
                    self.state = 38 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==9):
                        break

                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self.match(DsParser.RULE)
            self.state = 46
            self.match(DsParser.NEWLINE)
            self.state = 47
            self.term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DsParser.RULE_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SymbolContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DsParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYMBOL(self):
            return self.getToken(DsParser.SYMBOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbol" ):
                return visitor.visitSymbol(self)
            else:
                return visitor.visitChildren(self)


    class SubscriptContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DsParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DsParser.TermContext)
            else:
                return self.getTypedRuleContext(DsParser.TermContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubscript" ):
                return visitor.visitSubscript(self)
            else:
                return visitor.visitChildren(self)


    class FunctionContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DsParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DsParser.TermContext)
            else:
                return self.getTypedRuleContext(DsParser.TermContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)


    class BinaryContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DsParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYMBOL(self):
            return self.getToken(DsParser.SYMBOL, 0)
        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DsParser.TermContext)
            else:
                return self.getTypedRuleContext(DsParser.TermContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinary" ):
                return visitor.visitBinary(self)
            else:
                return visitor.visitChildren(self)


    class UnaryContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DsParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYMBOL(self):
            return self.getToken(DsParser.SYMBOL, 0)
        def term(self):
            return self.getTypedRuleContext(DsParser.TermContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnary" ):
                return visitor.visitUnary(self)
            else:
                return visitor.visitChildren(self)



    def term(self):

        localctx = DsParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                localctx = DsParser.SymbolContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.match(DsParser.SYMBOL)
                pass
            elif token in [1]:
                localctx = DsParser.SubscriptContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.match(DsParser.T__0)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1082) != 0):
                    self.state = 51
                    self.term()
                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 57
                self.match(DsParser.T__1)
                pass
            elif token in [3]:
                localctx = DsParser.FunctionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.match(DsParser.T__2)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1082) != 0):
                    self.state = 59
                    self.term()
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 65
                self.match(DsParser.T__1)
                pass
            elif token in [4]:
                localctx = DsParser.UnaryContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.match(DsParser.T__3)
                self.state = 67
                self.match(DsParser.SYMBOL)
                self.state = 68
                self.term()
                self.state = 69
                self.match(DsParser.T__1)
                pass
            elif token in [5]:
                localctx = DsParser.BinaryContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.match(DsParser.T__4)
                self.state = 72
                self.match(DsParser.SYMBOL)
                self.state = 73
                self.term()
                self.state = 74
                self.term()
                self.state = 75
                self.match(DsParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





